# fast_prac

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  run.sh
app/: main.py
app/config/: settings.py
app/crud/: item.py
app/database/: session.py
app/middleware/: exception_handlers.py
app/models/: item.py
app/routers/: items.py  router.py
app/schemas/: item.py
migrations/: env.py
migrations/versions/: 0f8606fbe5ce_initial_migrations.py
